--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "module": "esnext",
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "target": "es2019",
+    "target": "esnext",
     "noEmit": true,
     "incremental": true,
     "jsx": "preserve"
