--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stefanprobst/next-page-metadata",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "source": "src/index.tsx",
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
@@ -59,8 +59,8 @@
     "typescript": "^4.0.2"
   },
   "peerDependencies": {
-    "next": "^9.5.0",
-    "react": "^16.10.0"
+    "next": "^9.5.0||^10.0.0",
+    "react": "^16.10.0||^17.0.0"
   },
   "engines": {
     "node": ">=12.9",
