--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stefanprobst/next-page-metadata",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "source": "src/index.tsx",
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
@@ -25,6 +25,7 @@
     "prepublishOnly": "yarn && yarn clean && yarn build"
   },
   "dependencies": {
+    "react-schemaorg": "^1.3.1",
     "schema-dts": "^0.7.1"
   },
   "devDependencies": {
