--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stefanprobst/next-page-metadata",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "source": "src/index.tsx",
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
@@ -61,7 +61,7 @@
     "typescript": "^4.1.3"
   },
   "peerDependencies": {
-    "next": "^9.5.0||^10.0.0",
+    "next": "^9.5.0||^10.0.0||^11.0.0",
     "react": "^16.10.0||^17.0.0"
   },
   "engines": {
