chore: relax node version

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@stefanprobst/next-page-metadata",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "type": "module",
   "main": "dist/cjs/index.js",
-  "exports": {
-    "import": "./dist/index.js",
-    "require": "./dist/cjs/index.js",
-    "types": "./dist/index.d.ts"
-  },
   "types": "dist/index.d.ts",
+  "exports": {
+    "types": "./dist/index.d.ts",
+    "import": "./dist/index.js",
+    "require": "./dist/cjs/index.js"
+  },
   "repository": "git@github.com:stefanprobst/next-page-metadata",
   "license": "MIT",
   "files": [
@@ -32,7 +32,7 @@
     "validate": "yarn run format && yarn run lint && yarn run type-check && yarn test"
   },
   "engines": {
-    "node": "14.x",
+    "node": ">=14.17",
     "yarn": "1.x"
   },
   "sideEffects": false,
